# voice-segmentation

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vas/: __init__.py  _math.py  exceptions.py
src/vas/adapters/: __init__.py
src/vas/adapters/core/: __init__.py
src/vas/adapters/post/: __init__.py  duration.py  noop.py
src/vas/adapters/pre/: __init__.py  noop.py
src/vas/io/: __init__.py  audio.py  paths.py
src/vas/manifest/: __init__.py  models.py  writer.py
src/vas/ports/: __init__.py  core_processor.py  post_processor.py  pre_processor.py  types.py
src/vas/settings/: __init__.py  audio.py  base.py  duration.py  file.py
tests/: test_version.py
